--- a/wdd130/style.css
+++ b/wdd130/style.css
@@ -7,6 +7,12 @@ h1{
 img{
     width: 50%;
 }
+.red{
+    color: chartreuse;
+}
+#big{
+    font-size: 300%;
+}
 body{
     background-image: linear-gradient(
         black,green);
@@ -25,4 +31,3 @@ h3{
     font-size: 1.5em;
     border: 2px solid white;
     padding: 6px
-    
