--- a/wdd130/wwr/styles/styles.css
+++ b/wdd130/wwr/styles/styles.css
@@ -11,9 +11,25 @@ nav a {
 }
 #hero-msg {
   text-align: center;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
 }
 #hero-img {
   width: 100%;
+}
+#hero-msg h4 {
+  color: #f7f7f7;
+}
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px;
+}
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
 }
 .button-box {
   text-align: center;
@@ -37,6 +53,8 @@ body {
 }
 header {
   background-color: #031c29;
+  display: grid;
+  grid-template-columns: 150px auto;
 }
 nav a:hover {
   background-color: #0582ca;
@@ -64,6 +82,8 @@ nav a:hover {
 }
 #background {
   background-color: #031c29;
+  grid-column: 1/11;
+  grid-row: 4/9;
 }
 .msg {
   background-color: #0582ca;
@@ -71,6 +91,9 @@ nav a:hover {
   font-family: "Contrail One";
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
+  box-shadow: 5px 5px 10px #6f7364;
 }
 footer {
   background-color: #0582ca;
@@ -78,6 +101,9 @@ footer {
   font-family: "Roboto", Helvetica, sans-serif;
   padding: 25px 50px;
   margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .home-title {
   color: #031c29;
@@ -119,22 +145,91 @@ footer p {
 }
 #logo_link {
   padding-top: 5px;
+  justify-self: center;
+  align-self: center;
 }
 .rivers-card {
   margin: 200px 0;
+  grid-column: 2/4;
+  grid-row: 2/3;
 }
 .camping-card {
   margin: 200px 0;
+  grid-column: 5/7;
+  grid-row: 2/3;
 }
 .rapids-card {
   margin: 200px 0;
+  grid-column: 8/10;
+  grid-row: 2/3;
 }
 .card-img {
   border: 10px solid #031c29;
+  width: 100%;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #6f7364;
 }
 main section img {
   box-sizing: border-box;
 }
 .mountains {
   margin: 35px 0px 80px 0px;
+  width: 100%;
+  grid-column: 2/7;
+  grid-row: 5/8;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+.card-img:hover {
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+@media screen and (max-width: 900px) {
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
+  }
+  nav,
+  footer {
+    flex-direction: column;
+  }
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+  #hero {
+    margin-top: 0;
+  }
+  #hero-msg {
+    margin-top: 0;
+  }
+  #hero-msg h4 {
+    display: none;
+  }
+  .home-title {
+    font-size: 25px;
+    color: #6f7364;
+  }
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+  #background {
+    display: none;
+  }
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+    margin-top: 25px;
+  }
 }
