--- a/personalweb/personal.css
+++ b/personalweb/personal.css
@@ -1,1 +1,2 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora&family=Merriweather:wght@700&family=Roboto:wght@300&display=swap");
+@import url(https://coolors.co/525b63-8bae98-e9dcca-b33532-36293a);
