--- a/wdd130/wwr/styles/styles.css
+++ b/wdd130/wwr/styles/styles.css
@@ -125,6 +125,296 @@ footer a:hover {
   width: 80px;
   padding-top: 10px;
 }
+.logo {
+  width: 80px;
+}
+footer a {
+  color: #f7f7f7;
+  text-decoration: none;
+  font-family: "Roboto", Helvetica, sans-serif;
+}
+footer p {
+  font-size: 1.2em;
+  font-family: "Roboto", Helvetica, sans-serif;
+}
+#social2 {
+  width: 60px;
+  padding-top: 15px;
+}
+#content {
+  max-width: 1600px;
+  margin: 0 auto;
+  font-size: 22px;
+}
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
+.rivers-card {
+  margin: 200px 0;
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+.camping-card {
+  margin: 200px 0;
+  grid-column: 5/7;
+  grid-row: 2/3;
+}
+.rapids-card {
+  margin: 200px 0;
+  grid-column: 8/10;
+  grid-row: 2/3;
+}
+.card-img {
+  border: 10px solid #031c29;
+  width: 100%;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+main section img {
+  box-sizing: border-box;
+}
+.mountains {
+  margin: 35px 0px 80px 0px;
+  width: 100%;
+  grid-column: 2/7;
+  grid-row: 5/8;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+.card-img:hover {
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+@media screen and (max-width: 900px) {
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
+  }
+  nav,
+  footer {
+    flex-direction: column;
+  }
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+  #hero {
+    margin-top: 0;
+  }
+  #hero-msg {
+    margin-top: 0;
+  }
+  #hero-msg h4 {
+    display: none;
+  }
+  .home-title {
+    font-size: 25px;
+    color: #6f7364;
+  }
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+  #background {
+    display: none;
+  }
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+    margin-top: 25px;
+  }
+}
+.rivertitle {
+  color: #031c29;
+  margin-left: 25px;
+  margin-top: 25px;
+}
+.para {
+  font-size: 75%;
+  color: #f7f7f7;
+  margin-left: 25px;
+}
+.coloriver {
+  width: 850px;
+  height: 400px;
+  grid-column: 3/4;
+  grid-row: 1/3;
+  margin: 0px 25px 0px 0px;
+}
+.rivericon {
+  width: 200px;
+  height: 200px;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  border-radius: 50%;
+  margin: -50px 0px 0px 75px;
+}
+.rivers2 {
+  size: 200%;
+  grid-column: 2/3;
+  grid-row: 1/1;
+  margin-left: -163px;
+}
+.grid2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  margin-top: 25px;
+  margin-bottom: 50px;
+}
+.images4 {
+  width: 350px;
+  height: 200px;
+  margin: 25px 50px 25px 175px;
+}
+.smiley {
+  width: 300px;
+  height: 300px;
+  margin-left: 500px;
+}
+.all {
+  @import url("https://fonts.googleapis.com/css2?family=Contrail+One&family=Roboto:wght@300&display=swap")
+.button5 {
+  color: #031c29;
+}
+nav a {
+  text-align: center;
+  color: #f7f7f7;
+  text-decoration: none;
+  font-family: "Roboto", Helvetica, sans-serif;
+  padding: 35px;
+}
+#hero-msg {
+  text-align: center;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
+}
+#hero-img {
+  width: 100%;
+}
+#hero-msg h4 {
+  color: #f7f7f7;
+}
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px;
+}
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
+}
+.button-box {
+  text-align: center;
+}
+main section {
+  text-align: center;
+}
+h2 {
+  font-family: "Contrail One";
+  margin: 0;
+}
+#background {
+  height: 725px;
+}
+body {
+  background-color: #006494;
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
+}
+header {
+  background-color: #031c29;
+  display: grid;
+  grid-template-columns: 150px auto;
+}
+nav a:hover {
+  background-color: #0582ca;
+  color: #031c29;
+  font-family: "Roboto", Helvetica, sans-serif;
+}
+.msg p {
+  font-size: 0.8em;
+  padding-bottom: 15px;
+}
+.book,
+.join {
+  background-color: #006494;
+  color: #f7f7f7;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 15px 30px;
+  margin-top: 50px;
+  border-radius: 5px;
+}
+.book:hover,
+.join:hover {
+  background-color: #0582ca;
+  color: #031c29;
+}
+#background {
+  background-color: #031c29;
+  grid-column: 1/11;
+  grid-row: 4/9;
+}
+.msg {
+  background-color: #0582ca;
+  color: #031c29;
+  font-family: "Contrail One";
+  line-height: 1.5em;
+  padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+footer {
+  background-color: #0582ca;
+  color: #031c29;
+  font-family: "Roboto", Helvetica, sans-serif;
+  padding: 25px 50px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.home-title {
+  color: #031c29;
+  font-family: "Contrail One";
+  font-size: 2em;
+  margin-top: 10px;
+}
+.home-title2 {
+  color: #031c29;
+  font-family: "Roboto", Helvetica, sans-serif;
+}
+footer a:hover {
+  color: #031c29;
+  background-color: #0582ca;
+  text-decoration: none;
+  font-family: "Roboto", Helvetica, sans-serif;
+}
+.icon {
+  width: 80px;
+  padding-top: 10px;
+}
+.logo {
+  width: 80px;
+}
 footer a {
   color: #f7f7f7;
   text-decoration: none;
