--- a/personal_web/styles/personal.css
+++ b/personal_web/styles/personal.css
@@ -1,2 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora&family=Merriweather:wght@700&family=Roboto:wght@300&display=swap");
 @import url(https://coolors.co/525b63-8bae98-e9dcca-b33532-36293a);
+
+body {
+  background-color: white;
+}
+#content {
+  max-width: 1600px;
+  margin: 0 auto;
+  font-size: 22px;
+}
+#search {
+}
