--- a/personal_web/styles/personal.css
+++ b/personal_web/styles/personal.css
@@ -9,6 +9,336 @@ body {
   margin: 0 auto;
   font-size: 22px;
 }
-#search2 {
-  margin: 0;
+#search {
+  border: 4px solid #b33532;
+  width: 300px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-left: 300px;
+  color: #e9dcca;
+  font-family: "Roboto", "Lora&family", sans-serif;
+}
+header {
+  background-color: #525b63;
+  display: grid;
+  grid-template-columns: 150px auto;
+}
+.logo {
+  width: 150px;
+  margin-top: 5px;
+  margin-left: 10px;
+}
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
+nav a {
+  margin-top: -65px;
+  text-align: center;
+  color: #e9dcca;
+  text-decoration: none;
+  font-family: "Roboto", "Lora&family", sans-serif;
+  padding: 15px 20px 15px 20px;
+}
+nav a:hover {
+  background-color: #e9dcca;
+  color: #525b63;
+  font-family: "Roboto", "Lora&family", sans-serif;
+  border-radius: 10%;
+  box-shadow: 4px 5px 7px #8bae98;
+}
+.nav1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+.yeet {
+  grid-column: 1/2;
+  margin-left: 175px;
+  box-shadow: 4px 5px 10px #b33532;
+  border-radius: 5px;
+}
+.yeet1 {
+  grid-column: 2/3;
+  margin-left: 175px;
+  box-shadow: 4px 5px 10px #b33532;
+  border-radius: 5px;
+}
+.yeet2 {
+  grid-column: 3/4;
+  margin-left: 175px;
+  box-shadow: 4px 5px 10px #b33532;
+  border-radius: 5px;
+}
+.yeet3 {
+  grid-column: 4/5;
+  margin-left: 175px;
+  width: 150px;
+  box-shadow: 4px 5px 10px #b33532;
+  border-radius: 5px;
+}
+.front {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.front1 {
+  width: 100%;
+  height: 350px;
+  grid-column: 1/2;
+}
+.front2 {
+  grid-column: 1/2;
+  margin: -200px 0px 0px 50px;
+  color: #e9dcca;
+  border: 5px dashed #e9dcca;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  background-color: #525b63;
+  font-family: "Roboto", "Lora&family", sans-serif;
+}
+.featureditems {
+  font-family: "Roboto", "Lora&family", sans-serif;
+  background-color: #8bae98;
+  margin: 40px auto;
+  color: #525b63;
+  width: 300px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+}
+.featured {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  font-family: "Roboto", "Lora&family", sans-serif;
+  padding-left: 20px;
+}
+.photo1 {
+  width: 200px;
+  height: 300px;
+  grid-column: 1/2;
+  margin: 0px 0px 0px 20px;
+  padding: 20px;
+  border: 2px solid #b33532;
+}
+.photo1:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  box-shadow: 5px 5px 10px #8bae98;
+}
+.photo2 {
+  width: 200px;
+  height: 300px;
+  grid-column: 2/3;
+  padding: 20px;
+  border: 2px solid #b33532;
+  margin: 0px 0px 0px 20px;
+}
+.photo2:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  box-shadow: 5px 5px 10px #8bae98;
+}
+.photo3 {
+  width: 200px;
+  height: 300px;
+  grid-column: 3/4;
+  padding: 20px;
+  border: 2px solid #b33532;
+  margin: 0px 0px 0px 20px;
+}
+.photo3:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  box-shadow: 5px 5px 10px #8bae98;
+}
+.photo4 {
+  width: 200px;
+  height: 300px;
+  grid-column: 4/5;
+  padding: 20px;
+  border: 2px solid #b33532;
+  margin: 0px 0px 0px 20px;
+}
+.photo4:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  box-shadow: 5px 5px 10px #8bae98;
+}
+.text1 {
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+  margin-left: 2px;
+}
+.text2 {
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+}
+.text3 {
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+}
+.text4 {
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+}
+.text5 {
+  margin-left: 2px;
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+  margin-top: -50px;
+  font-weight: bold;
+}
+.text6 {
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+  margin-top: -50px;
+  font-weight: bold;
+}
+.text7 {
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+  margin-top: -50px;
+  font-weight: bold;
+}
+.text8 {
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+  margin-top: -50px;
+  font-weight: bold;
+}
+.featureditems1 {
+  font-family: "Roboto", "Lora&family", sans-serif;
+  background-color: #8bae98;
+  margin: 40px auto;
+  color: #525b63;
+  width: 450px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+}
+.catag {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  font-family: "Roboto", "Lora&family", sans-serif;
+  padding-left: 20px;
+}
+.photos1 {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  padding: 15px;
+  grid-column: 1/2;
+  margin-left: 20px;
+  border: 5px double #b33532;
+  margin-top: 50px;
+}
+.photos1:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  border: 5px solid #b33532;
+}
+.photos2 {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  padding: 15px;
+  grid-column: 2/3;
+  margin-left: 20px;
+  border: 5px double #b33532;
+  margin-top: 50px;
+}
+.photos2:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  border: 5px solid #b33532;
+}
+.photos3 {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  padding: 15px;
+  grid-column: 3/4;
+  margin-left: 20px;
+  border: 5px double #b33532;
+  margin-top: 50px;
+}
+.photos3:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  border: 5px solid #b33532;
+}
+.photos4 {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  padding: 15px;
+  grid-column: 4/5;
+  margin-left: 20px;
+  border: 5px double #b33532;
+  margin-top: 50px;
+}
+.photos4:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  border: 5px solid #b33532;
+}
+.photos5 {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  padding: 15px;
+  grid-column: 5/6;
+  margin-left: 20px;
+  border: 5px double #b33532;
+  margin-top: 50px;
+}
+.photos5:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+  border: 5px solid #b33532;
+}
+footer {
+  background-color: #525b63;
+  color: #e9dcca;
+  font-family: "Roboto", "Lora&family", sans-serif;
+  padding: 25px 50px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.footer2 {
+  color: #e9dcca;
+}
+footer a:hover {
+  color: #e9dcca;
+  background-color: #525b63;
+  text-decoration: none;
+  font-family: "Roboto", "Lora&family", sans-serif;
+}
+footer p {
+  font-size: 1.2em;
+  font-family: "Roboto", "Lora&family", sans-serif;
+}
+#social2 {
+  width: 60px;
+  padding-top: 15px;
 }
