--- a/personal_web/styles/personal.css
+++ b/personal_web/styles/personal.css
@@ -650,6 +650,22 @@ footer {
   color: #8bae98;
   padding: 20px;
 }
+.form4 {
+  font-family: "Roboto", "Lora&family", sans-serif;
+  background-color: #525b63;
+  margin: 40px auto 70px auto;
+  color: #e9dcca;
+  width: 700px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+}
+.faq {
+  font-family: "Roboto", "Lora&family", sans-serif;
+  color: #000000
+  margin: 30px 0px;
+  padding: 20px;
+}
 
 .footer2 {
   color: #e9dcca;
