--- a/personal_web/styles/personal.css
+++ b/personal_web/styles/personal.css
@@ -666,6 +666,29 @@ footer {
   margin: 30px 0px;
   padding: 20px;
 }
+.smile{
+  margin: 50px 525px 0px 525px;
+}
+.message{
+  text-align: center;
+}
+#contact{
+  border: 4px solid #b33532;
+  width: 300px;
+  border-radius: 10px;
+  color: #525b63;
+  font-family: "Roboto", "Lora&family", sans-serif;
+  padding: 20px;
+  margin: 20px 450px;
+}
+.email{
+  text-decoration: underline;
+  padding: 10px;
+}
+.phone{
+  text-decoration: underline;
+  padding: 10px;
+}
 
 .footer2 {
   color: #e9dcca;
