--- a/personal_web/styles/personal.css
+++ b/personal_web/styles/personal.css
@@ -62,32 +62,40 @@ nav a:hover {
 .nav1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  width: 500px;
+  width: max-content;
+  margin-left: 175px;
 }
 .yeet {
   grid-column: 1/2;
-  margin-left: 175px;
   box-shadow: 4px 5px 10px #b33532;
   border-radius: 5px;
+  width: 100%;
+  text-align: center;
+  margin-left: 20px;
 }
 .yeet1 {
   grid-column: 2/3;
-  margin-left: 175px;
   box-shadow: 4px 5px 10px #b33532;
+  width: 100%;
   border-radius: 5px;
+  text-align: center;
+  margin-left: 40px;
 }
 .yeet2 {
   grid-column: 3/4;
-  margin-left: 175px;
   box-shadow: 4px 5px 10px #b33532;
   border-radius: 5px;
+  width: 100%;
+  text-align: center;
+  margin-left: 60px;
 }
 .yeet3 {
   grid-column: 4/5;
-  margin-left: 175px;
-  width: 150px;
+  width: 100%;
   box-shadow: 4px 5px 10px #b33532;
   border-radius: 5px;
+  text-align: center;
+  margin-left: 80px;
 }
 .front {
   display: grid;
