--- a/personal_web/styles/personal.css
+++ b/personal_web/styles/personal.css
@@ -821,7 +821,7 @@ footer p {
   font-family: "Roboto", "Lora&family", sans-serif;
   color: #e9dcca;
 }
-#social2 {
+.social2 {
   width: 60px;
   padding-top: 15px;
 }
