--- a/personal_web/styles/personal.css
+++ b/personal_web/styles/personal.css
@@ -33,7 +33,9 @@ header {
   background-color: #525b63;
   display: grid;
   grid-template-columns: 150px auto;
+  width: 100%;
 }
+
 .logo {
   width: 150px;
   margin-top: 5px;
@@ -56,14 +58,14 @@ nav a:hover {
   background-color: #e9dcca;
   color: #525b63;
   font-family: "Roboto", "Lora&family", sans-serif;
-  border-radius: 10%;
+  border-radius: 5%;
   box-shadow: 4px 5px 7px #8bae98;
 }
 .nav1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   width: max-content;
-  margin-left: 175px;
+  margin: 0px 0px 10px 175px;
 }
 .yeet {
   grid-column: 1/2;
