--- a/wdd130/colors.css
+++ b/wdd130/colors.css
@@ -33,3 +33,84 @@
   height: 450px;
   margin: 100px 250px;
 }
+.images2:hover {
+  opacity: 1;
+  transform: scale(1.2);
+  transition: transform 0.4s;
+  box-shadow: 5px 5px 10px #8bae98;
+  width: 200px;
+}
+.image1:hover {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 10s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(3px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-3px, -2px) rotate(10deg);
+  }
+  20% {
+    transform: translate(-5px, 0px) rotate(20deg);
+  }
+  30% {
+    transform: translate(5px, 2px) rotate(40deg);
+  }
+  40% {
+    transform: translate(3px, -1px) rotate(60deg);
+  }
+  50% {
+    transform: translate(-3px, 2px) rotate(801deg);
+  }
+  60% {
+    transform: translate(-5px, 1px) rotate(100deg);
+  }
+  70% {
+    transform: translate(5px, 1px) rotate(120deg);
+  }
+  80% {
+    transform: translate(-3px, -1px) rotate(140deg);
+  }
+  90% {
+    transform: translate(3px, 2px) rotate(160deg);
+  }
+  91% {
+    transform: translate(3px, 2px);
+  }
+  92% {
+    transform: translate(3px, 2px);
+  }
+  93% {
+    transform: translate(3px, 2px);
+  }
+  94% {
+    transform: translate(3px, 2px);
+  }
+  95% {
+    transform: translate(3px, 2px);
+  }
+  100% {
+    transform: translate(3px, -2px) rotate(180deg);
+  }
+}
+.sebas {
+  color: black;
+  width: 600px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 30px;
+}
+.ammon {
+  color: black;
+  width: 600px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 30px;
+}
